# ffind

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  README  README.md  README.rst  RELEASE_NOTES.md  TODO  build.py  codecov.yml  ffind.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: ALL_ARGUMENTS.md  ENV_VARIABLES.md
ffind/: ffind.py
ffind/backports/: argparse.py
man_pages/: README  ffind.1  ffind.html  install.sh
scripts/: ffind
src/ffind/: ffind.py
tests/: README  basic.t  caps.t  case_sensitive.t  cleanup.sh  command.t  delete.t  execute.t  fuzzy.t  hidden.t  ignore_vcs.t  module.t  path.t  regex.t  regex2.t  return_results.t  setup.sh  wrong_pattern.t
