[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffind"
version = "1.6.0"
description = "Sane replacement for command line file search"
readme = "README.md"
requires-python = ">=3.9,<4"
license = "MIT"
authors = [
    { name = "Jaime Buelta", email = "jaime.buelta@gmail.com" }
]
keywords = ["searching", "file system"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/jaimebuelta/ffind"
Download = "https://github.com/jaimebuelta/ffind/tarball/v1.6.0"

[project.scripts]
ffind = "ffind.ffind:run"

[tool.hatch.build]
artifacts = [
    "man_pages/ffind.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ffind"]
artifacts = [
    "man_pages/ffind.1",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/ffind/**/*.py",
    "man_pages/**/*",
]

[tool.hatch.build.hooks.custom]
path = "build.py"
hooks = ["build_hook", "install_hook"] 